# ttygate

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  SECURITY.md  deny.toml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  security-sensitive-change.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml
crates/ttygated/: Cargo.toml
crates/ttygated/src/: audit.rs  auth.rs  config.rs  healthcheck.rs  lib.rs  main.rs  origin.rs  protocol.rs  pty_backend.rs  rate_limit.rs  server.rs  service_manager.rs  session.rs  ssh.rs  startup.rs  ticket.rs  tls.rs  websocket.rs
crates/ttygated/tests/: audit_log.rs  healthcheck.rs  http_server.rs  pty_session.rs  service_manager.rs  ssh_server.rs  tls_server.rs  trusted_proxy_server.rs  websocket_bridge.rs
crates/ttygated/tests/fixtures/: pty_child.sh
crates/ttygated/tests/fixtures/sshd/: Dockerfile  entrypoint.sh
docs/: protocol.md  roadmap.md  threat-model.md  ttygate-rewrite-plan.md
docs/decisions/: 0001-license.md  0002-web-stack.md  0003-pty.md  0004-openssh-subprocess.md
docs/plans/: 2026-07-11-chunk-0.1-repo-scaffold.md  2026-07-11-chunk-0.2-public-docs-baseline.md  2026-07-11-chunk-0.3-decision-spikes.md  2026-07-11-chunk-1.1-config-allowlist.md  2026-07-11-chunk-1.2-wire-protocol-design.md  2026-07-11-chunk-1.2-wire-protocol.md  2026-07-11-chunk-1.3-http-server-dev-identity-tickets.md  2026-07-17-chunk-1.3-origin-auth-follow-up.md  2026-07-17-chunk-1.4-pty-session-lifecycle.md  2026-07-18-chunk-1.5-websocket-bridge.md  2026-07-18-chunk-1.6-browser-frontend.md  2026-07-18-chunk-2.1-production-gating-design.md  2026-07-18-chunk-2.1-production-gating.md  2026-07-18-chunk-2.2-trusted-proxy-auth-design.md  2026-07-18-chunk-2.2-trusted-proxy-auth.md  2026-07-18-chunk-2.3-rate-concurrency-limits-design.md  2026-07-18-chunk-2.3-rate-concurrency-limits.md  2026-07-18-chunk-2.4-audit-subsystem-design.md  2026-07-18-chunk-2.4-audit-subsystem.md  2026-07-18-chunk-3.1-openssh-backend-design.md  2026-07-18-chunk-3.1-openssh-backend.md  2026-07-19-chunk-4.1-docker-systemd-design.md  2026-07-19-chunk-4.1-docker-systemd.md  2026-07-19-chunk-4.2-deployment-docs-design.md  2026-07-19-chunk-4.2-deployment-docs.md
frontend/: build.mjs  package-lock.json  package.json  playwright.config.ts  tsconfig.json
frontend/e2e/: run-server.ts  run-server.unit.ts  terminal.spec.ts
frontend/src/: api.test.ts  api.ts  app.css  connection.test.ts  connection.ts  identity.test.ts  identity.ts  index.html  main.ts  protocol.test.ts  protocol.ts  terminal-io.test.ts  terminal-io.ts  ui.test.ts  ui.ts
packaging/docker/: README.md  ttygate.toml
packaging/reverse-proxy/: Caddyfile  README.md  nginx.conf  ttygate.toml
packaging/systemd/: README.md  ttygate.sysusers  ttygate.tmpfiles  ttygated.service
protocol/: fixtures.json
scripts/: check-deployment-docs.sh  check-packaging.sh  check-public-docs.sh  smoke-docker.sh  smoke-reverse-proxy.sh  smoke-systemd.sh
scripts/fixtures/: docker-session.mjs  reverse-proxy-auth.mjs  reverse-proxy-fixtures.test.mjs  reverse-proxy-session.mjs
spikes/: README.md  run-all.sh
spikes/evidence/: README.md  openssh.md  pty.md  web-stack.md
spikes/openssh/: Cargo.toml  run.sh
spikes/openssh/src/: main.rs
spikes/openssh/sshd/: Dockerfile  entrypoint.sh
spikes/pty/: Cargo.toml  run.sh
spikes/pty/fixtures/: child.sh
spikes/pty/src/: main.rs
spikes/web-stack/: Cargo.toml  run.sh
spikes/web-stack/src/: main.rs
