[package]
name = "ttygated"
description = "Security-first browser terminal gateway daemon"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum = "0.8"
base64 = "0.22"
getrandom = "0.4"
nix = { version = "0.30.1", features = ["process", "signal"] }
pty-process = { version = "0.5.3", features = ["async"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = [
    "io-util",
    "macros",
    "net",
    "process",
    "rt-multi-thread",
    "sync",
    "time",
] }
toml = "1"
url = "2"

[dev-dependencies]
http-body-util = "0.1"
tempfile = "3"
tokio = { version = "1", features = ["test-util"] }
tower = { version = "0.5", features = ["util"] }
