[package]
name = "ttygated"
description = "Security-first browser terminal gateway daemon"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum = { version = "0.8", features = ["ws"] }
axum-server = { version = "0.8", features = ["tls-rustls-no-provider"] }
base64 = "0.22"
futures-util = { version = "0.3", features = ["sink"] }
getrandom = "0.4"
http = "1"
ipnet = "2"
nix = { version = "0.30.1", features = ["process", "signal"] }
pty-process = { version = "0.5.3", features = ["async"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = [
    "io-util",
    "macros",
    "net",
    "process",
    "rt-multi-thread",
    "sync",
    "time",
] }
toml = "1"
tungstenite = { version = "0.29", default-features = false }
url = "2"

[dev-dependencies]
http-body-util = "0.1"
rcgen = "0.14"
tempfile = "3"
tokio = { version = "1", features = ["test-util"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
tokio-tungstenite = "0.29"
tower = { version = "0.5", features = ["util"] }
